@@ -14,6 +14,7 @@ Enhancements
  - [web] disable JavaScript theme generation when SOGoUIxDebugEnabled is set to NO
  - [web] added Serbian (sr) translation - thanks to Bogdanović Bojan
  - [web] added sort by arrival date in Mail module (#708)
+ - [web] restored "now" line in Calendar module
  - [web] updated CKEditor to version 4.5.11
  - [eas] propagate message submission errors to EAS clients (#3774) 
 
